# ouroboros

./: .env.example  .gitattributes  .gitignore  .mcp.codex.json  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  CONTRIBUTING.md  HACKATHON_SUBMISSION.md  HANDOFF.md  OUTIO.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  SOUL.md  TODO-cursor-support.md  UNINSTALL.md  agent.yaml  llms-full.txt  openclaw_bridge.py  package.json  project-context.md  pyproject.toml  result.md  tsconfig.json  vision-draft.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: .mcp.json  README.md  SKILL_CAPABILITY_GUIDE.md  marketplace.json  plugin.json
.claude-plugin/agents/: architect.md  contrarian.md  researcher.md  seed-architect.md  simplifier.md  socratic-interviewer.md
.claude-plugin/hooks/: hooks.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  (+6 more)
_bmad-output/: update-stories.sh
agents/: ac-executor.md  architect.md  breadth-keeper.md  consensus-reviewer.md  evaluator.md  hacker.md  ontologist.md  ontology-analyst.md  pm-interviewer.md  qa-judge.md  seed-architect.md  simplifier.md  socratic-interviewer.md
commands/: rlm.md  welcome.md
crates/ouroboros-tui/: Cargo.toml  README.md
crates/ouroboros-tui/src/: db.rs  main.rs  state.rs
crates/ouroboros-tui/src/views/: dashboard.rs  execution.rs  logs.rs
docs/: README.md  architecture.md  auto-interview-convergence-contract.md  cli-reference.md  compare-alternatives.md  config-reference.md  cursor-platform-support-notes.md  events.md  getting-started.md  interview-advisory-fanout-comparison.html  onboarding-metrics.md  platform-support.md  running-with-claude-code.md  runtime-capability-matrix.md  runtime-compatibility.md
examples/: dummy_seed.yaml  test_display.py
hooks/: hooks.json
requirement/: 1_EXECUTIVE_SUMMARY.md  2_FULL_SPECIFICATION.md  3_CONFIG_TEMPLATE.yaml  4_REDDIT_EXAMPLE.md
scripts/: check-auto-boundary.py  check-auto-perf-budget.py  check-max-turns-envelope.py  drift-monitor.mjs  export_interview_latency.py  install.sh  keyword-detector.mjs  keyword-detector.py  ralph-rewind.py  ralph.py  ralph.sh  session-start.mjs  session-start.py  sync-plugin-version.py
seeds/: phase-1.5-dogfood-ac1.yaml  phase-1.5-dogfood.completed-ac1.yaml  phase-1.5-dogfood.completed-ac123.yaml  phase-1.5-dogfood.yaml  phase-2-q2-diff-capture.yaml
src/: gateway.ts  infra-client.ts  live-verification.ts  policy.ts  stdio.ts
task_manager/: __main__.py  cli.py  models.py  storage.py
tests/: conftest.py  policy.test.ts
tools/: live_gjc_agentos_qa.py  sync_github_project.py
(+1381 files in other folders)
