[project]
name = "ouroboros-ai"
version = "0.5.0"
description = "Self-Improving AI Workflow System"
readme = "README.md"
authors = [
    { name = "Q00", email = "jqyu.lee@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "cachetools>=5.0.0",
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "litellm>=1.80.0",
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "stamina>=25.1.0",
    "structlog>=24.0.0",
    "textual>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
ouroboros = "ouroboros.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ouroboros"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
# Strict type checking
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true

# Note: For external packages without type stubs, use per-module overrides below
# Example: [[tool.mypy.overrides]]
# module = "some_untyped_package.*"
# ignore_missing_imports = true

[tool.pytest.ini_options]
# asyncio_mode = "auto" per project-context.md
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["ouroboros"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
